--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "eslint-import-resolver-alias": "^1.1.2",
     "prettier": "2.3.2"
   },
   "keywords": [
